# efp_monte_carlo

./: CMakeLists.txt  README.md  config.inc  module.sh  setup.sh
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build2/efpmd/: Makefile  cmake_install.cmake  efpmd
build2/efpmd/libff/: Makefile
build2/efpmd/libopt/: Makefile  cmake_install.cmake
build2/fraglib/: pentacene.efp  water.efp
build2/src/: Makefile  cmake_install.cmake
build3/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build3/efpmd/: Makefile  cmake_install.cmake  efpmd
build3/efpmd/libff/: Makefile  cmake_install.cmake
build3/efpmd/libopt/: Makefile
build3/fraglib/: h2o_reduced.efp  xxii_exp_n2_2.efp
build3/src/: Makefile  cmake_install.cmake
build5/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  libefpConfig.cmake  libefpConfigVersion.cmake
build5/efpmd/: .nfs0000000019267d5100013133  Makefile  cmake_install.cmake  efpmd
build5/efpmd/libff/: Makefile  cmake_install.cmake
build5/efpmd/libopt/: Makefile
build5/fraglib/: xxii_exp_n2_1.efp
build5/src/: Makefile  cmake_install.cmake
build5/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
efpmd/: CMakeLists.txt
efpmd/libff/: CMakeLists.txt
efpmd/libopt/: CMakeLists.txt  opt.c
efpmd/src/: Makefile  common.h  energy.c  main.c  mc.c  mc.c_orig  md.c_edit  parse.c  torch.c
efpmd/torch/: ANIModel.h  c_libtorch.cc  c_libtorch.h
share/libefp/fraglib/: tetracene.efp
src/: CMakeLists.txt  efp.c  parse.c
tests/: 3w.in  3w_all.in  3w_all2.in  6w.in  6w_all.in  6w_all2.in  6w_all_more.in  6w_dis.in  6w_dis2.in  6w_fow.in  6w_more.in  6w_more2.in  6w_mow.in  6w_skp_opt0.in  6w_skp_opt1.in  8w.in  8w_all.in  8w_all2.in  CMakeLists.txt  ani2_error  ani2_error_output_noconv  blah  ctor1.in  ctor1_out  elpot_frag.in  etst  fow  gtest_ani.in  gtest_elpot.in  hmm  mc_1.in  mc_2.in  mm_atom_1.in  normal_output_for_torch_1  opt_1.in  opt_2.in  out  out1  out2  out3  (+29 more)
tests/for_suranjan/: ch2o-4w.inp  ch2o-6w.inp  torch_w3b1-1.in  w3b1-1.inp  w6b1-1.inp  w7b1-1.inp  w8b1-1.inp
tests/xyzs/: 6w_f0_opt0.out  6w_f0_opt1.out  6w_more.in  6w_more.out  benz0_gif.xyz  benz_opt0_end.xyz  benz_opt0_str.xyz  opt0_end.xyz  opt0_gif.xyz  opt0_str.xyz  opt1_end.xyz  opt1_gif.xyz  opt1_str.xyz  t_efp2_f2_opt0.out  t_efp2_f2_opt1.out
